# panther-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: GETTING_STARTED.md  STRATEGIES.md
skills/setup/: SKILL.md
skills/strategies/: SKILL.md
src/panther_mcp/: __init__.py  auth.py  client.py  models.py  server.py
src/panther_mcp/tools/: backtest.py  data.py  results.py
tests/: test_auth.py  test_client.py  test_e2e.py  test_models.py  test_server.py
